--- a/overwrite.css
+++ b/overwrite.css
@@ -3,13 +3,21 @@ main {
 }
 
 header {
-  background-color: #e6dfce;
-  color: #3a3a3a;
+    background-color: #e6dfce !important;
+    color: #3a3a3a !important;
 }
 
 header button,
 .MuiButton-root {
-  padding: 8px 14px !important;
-  border:none!important;
-  min-width: 0px!important;
+    padding: 8px 14px !important;
+    border:none!important;
+    min-width: 0px!important;
+}
+
+.css-15uhqj8 {
+    background: none !important;
+    border: none !important;
+    color: #3c4328 !important;
+    font-size: 26px;
+    margin: 20px 0px -20px 10px;
 }
