--- a/overwrite.css
+++ b/overwrite.css
@@ -12,6 +12,7 @@ header button,
     padding: 8px 14px !important;
     border:none!important;
     min-width: 0px!important;
+    background:none;
 }
 
 .css-15uhqj8 {
